--- a/frontend/src/app/pages/statistics/components/tag-info-modal/tag-info-modal.component.scss
+++ b/frontend/src/app/pages/statistics/components/tag-info-modal/tag-info-modal.component.scss
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     h1 {
       text-align: center;
       margin: 0;
@@ -52,6 +53,7 @@
     }
     h5{
         color: red;
+        // font-size: 1.1em;
     }
 
     .negative {
