[feature] add docker files, and dtest deployment

--- a/frontend/src/app/pages/resources/components/resource-icon/resource-icon.component.scss
+++ b/frontend/src/app/pages/resources/components/resource-icon/resource-icon.component.scss
@@ -2,7 +2,7 @@
     width: 17vh;
     height: 17vh;
     border-radius: 3vh;
-    border: greenyellow dashed 1px;
+    border: #ccdc39 dashed 1px;
     margin: 5vh;
     cursor: pointer;
     display: flex;
