--- a/frontend/src/app/pages/resources/ui/resources-screen/resources-screen.component.scss
+++ b/frontend/src/app/pages/resources/ui/resources-screen/resources-screen.component.scss
@@ -1,18 +1,31 @@
-
 .container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  margin: 5vh;
+  h1 {
+    font-size: 4vh;
+  }
+
+  .resources {
+    width: 100%;
+    // background-color: red;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    margin: 5vh;
-    h1{
-        font-size: 4vh;
-    }
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and(max-width:600px) {
+  .container {
+    margin: 1vh;
 
     .resources {
-        width: 100%;
-        // background-color: red;
-        display: flex;
-        flex-wrap: wrap;
+      width: 100%;
+      // background-color: red;
+      justify-content: space-between;
+      display: flex;
+      flex-wrap: wrap;
     }
+  }
 }
