--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,49 @@
+.container {
+  width: 100%;
+  height: 100%;
+  background-color: #1b1e27;
+}
 .example-spacer {
-    flex: 1 1 auto;
+  flex: 1 1 auto;
+}
+
+.sidenav {
+  min-width: 20vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  button {
+    width: 100%;
+    height: 10vh;
+    font-size: 3vh;
   }
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  z-index: 50;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  h4,h5 {
+    margin: 0;
+  }
+  h4{
+    color: #ccdc39;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .footer {
+    display: none ;
+  }
+  .sidenav {
+    width: 100%;
+  }
+}
