--- a/frontend/src/app/pages/resources/components/resource-icon/resource-icon.component.scss
+++ b/frontend/src/app/pages/resources/components/resource-icon/resource-icon.component.scss
@@ -16,3 +16,11 @@
 .container:hover{
     box-shadow: 0 10px 13px -6px rgba(0,0,0,.2),0 20px 31px 3px rgba(0,0,0,.14),0 8px 38px 7px rgba(0,0,0,.12)!important;
 }
+
+@media screen and(max-width:600px) {
+    .container {
+        margin: 1vh;
+        width: 15vh;
+        height: 15vh;
+    }
+  }
