--- a/frontend/src/app/pages/statistics/components/statistics/statistics.component.scss
+++ b/frontend/src/app/pages/statistics/components/statistics/statistics.component.scss
@@ -29,8 +29,7 @@ mat-form-field {
   width: 100%;
 }
 
-
-.loading-container{
+.loading-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,5 +40,26 @@ mat-form-field {
   background-color: rgba(98, 112, 99, 0.315);
   z-index: 100;
 }
-.loading{
+.loading {
+}
+
+.charts {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  .chart {
+    height: 50vh;
+    width: 40vw;
+  }
+}
+
+@media screen and(max-width: 600px) {
+  .charts {
+    .chart{
+      width: 100%;
+    }
+  }
+  .chips {
+    width: 80vw;
+  }
 }
