--- a/frontend/src/app/pages/statistics/components/statistics/statistics.component.scss
+++ b/frontend/src/app/pages/statistics/components/statistics/statistics.component.scss
@@ -33,8 +33,8 @@ mat-form-field {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   background-color: rgba(98, 112, 99, 0.315);
@@ -50,16 +50,25 @@ mat-form-field {
   .chart {
     height: 50vh;
     width: 40vw;
+    margin: 2vh;
   }
 }
 
 @media screen and(max-width: 600px) {
+  .container {
+  }
   .charts {
-    .chart{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    overflow: auto;
+    max-height: 50vh;
+    .chart {
       width: 100%;
     }
   }
   .chips {
     width: 80vw;
   }
+
 }
