[fix] fix redirection in resources modla

--- a/frontend/src/app/pages/resources/components/type-tag-modal/type-tag-modal.component.html
+++ b/frontend/src/app/pages/resources/components/type-tag-modal/type-tag-modal.component.html
@@ -15,7 +15,7 @@
     <button
       color="primary"
       mat-raised-button
-      (click)="tag == '' ? null : dialogRef.close(tag)"
+      (click)="tag == '' ? null : handleRedirect(tag)"
     >
       Learn {{ tag }}
     </button>
